# las2019

./: call.sh  install.sh  meson.build  net.danigm.las.json
data/: meson.build  net.danigm.las.appdata.xml.in  net.danigm.las.desktop.in  net.danigm.las.gschema.xml  net.danigm.las.service.in  net.danigm.las2.service.in
po/: POTFILES  meson.build
src/: las.gresource.xml  las.in  las2.in  main.py  meson.build  window.py  window.ui
